# janus

./: Cargo.toml  README.md
src/: editor.rs  lib.rs  main.rs  settings.rs
ui/: appwindow.slint
