[package]
name = "janus"
description = "A scratchpad-like text manipulator with LLM integration written in Rust"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lukeaar/janus"
license-file = "COPYING"

[dependencies]
eframe = { version = "0.25.0", default-features = true, features = ["persistence",] }
syntect = "5.0"
serde = "1.0.195"