[package]
name = "janus"
authors = ["Luke Aaron"]
description = "A scratchpad-like text manipulator with LLM integration written in Rust"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lukeaar/janus"
license-file = "COPYING"
build = "build.rs"

[dependencies]
slint = "1.4"

[build-dependencies]
slint-build = "1.4"